--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 
 <head>
   <title>Dublin Twenties</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -87,7 +88,7 @@
 
   <div id="debate-game" class="hidden">
     <h1>DEBATE</h1>
-    Your new topic is:
+    <p>Your new topic is:</p>
     <div class="center">
       <div id="debate-output"></div>
     </div>
@@ -103,7 +104,7 @@
   </div>
   <div id="roleplay-game" class="hidden">
     <h1>ROLEPLAY</h1>
-    Your new identity is:
+    <p>Your new identity is:</p>
     <div class="center">
       <div id="roleplay-output"></div>
     </div>
@@ -120,7 +121,7 @@
   </div>
   <div id="question-game" class="hidden">
     <h1>QUESTION</h1>
-    Your new question is:
+    <p>Your new question is:</p>
     <div class="center">
       <div id="question-output"></div>
     </div>
@@ -165,8 +166,7 @@
   .border-box {
     border: 1px solid black;
     display: block;
-    max-width: 350px;
-    width: 98%;
+    width: 350px;
     padding: 15px;
     margin: 0 auto;
     margin-top: 10px;
@@ -187,13 +187,17 @@
     border: 3px solid black; 
     border-radius: 3px;
     font-style: italic;
-    max-width: 350px;
-    width: 98%;
-    padding: 10px;
-    min-height: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 17px;
+    width: 350px;
+    padding: 10px 30px;
+    min-height: 50px;
   }
 
   .generate {
+    padding: 8px 16px;
     margin: 10px 0;
   }
 </style>
