--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 <body>
   <img src="logo.png" class="logo" />
-  <div id="start-screen" class="hidden">
+  <div id="start-screen">
     <h2>Welcome to Speed Conversations</h2>
     <div class="border-box">
       <p>Rules:</p>
@@ -98,7 +98,7 @@
     </div>
     <button onclick="toGame()">We understand</button>
   </div>
-  <div id="game" class="">
+  <div id="game"  class="hidden">
     <div class="center">
       <div id="output"></div>
     </div>
